# wilpac

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sabr
.github/workflows/: c-cpp.yml
doc/: Adding Buckets.md  Comments.md  Comments.txt  Error Codes.md  Include Statements.md  JSON.md
scripts/: fetch.sh
src/: Bucket.cpp  Bucket.h  Buckets.h  Colors.h  Commands.cpp  Commands.h  Input.cpp  Input.h  Output.h  Package.cpp  Package.h  PackageMan.cpp  PackageMan.h  PackageStat.h  Parser.cpp  Parser.h  Runtime.cpp  Runtime.h  UserInfo.cpp  UserInfo.h  bucket.cpp  bucket.h  main.cpp  runtime.cpp  runtime.h  userinfo.cpp  userinfo.h
wilpac-main/: .gitignore  Makefile  README.md
wilpac-main/src/: Commands.h  Runtime.cpp  Runtime.h
